<resources>
    <string name="app_name">BASiL</string>

    <string name="shopping_list">Shopping List</string>
    <string name="category_appetizers">Appetizers</string>
    <string name="category_entrees">Entrees</string>
    <string name="category_desserts">Desserts</string>
    <string name="category_cocktails">Cocktails</string>

    <string name="calories">Calories</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="gluten_free">Gluten-free</string>
    <string name="egg_free">Egg Free</string>

</resources>