<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RecipeDescriptionFragment">

    <RelativeLayout
        android:id="@+id/recipe_description_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/recipe_rectangle"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="20dp"
            android:alpha="0.3"
            android:background="@color/green_100" />

        <TextView
            android:id="@+id/recipe_title"
            style="@style/TextAppearance.Basil.Title"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:autoSizeTextType="uniform"
            android:maxLines="2"
            android:text="Creamy Pesto Pasta"
            android:textAlignment="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/recipe_title"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/green_800" />

        <TextView
            android:id="@+id/recipe_description"
            style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="175dp"
            android:layout_below="@id/recipe_title"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:autoSizeTextType="uniform"
            android:text="Guilt-free gluten-
free spaghetti pasta
is sautéed in a
garlic, kale pesto.
It's an easy and
healthy dinner."
            android:textAlignment="center"
            android:textColor="@color/green_800" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/recipe_description_relative_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="90">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calories"
                    android:textColor="@color/green_500" />

                <TextView
                    style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="465g"
                    android:textColor="@color/green_800" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/protein"
                    android:textColor="@color/green_500" />

                <TextView
                    style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="27g"
                    android:textColor="@color/green_800" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fat"
                    android:textColor="@color/green_500" />

                <TextView
                    style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12g"
                    android:textColor="@color/green_800" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="@color/green_800" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/is_gluten_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/gluten_free" />

                <TextView
                    style="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/gluten_free"
                    android:textColor="@color/green_800" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/is_egg_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_egg_free" />

                <TextView
                    style="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/egg_free"
                    android:textColor="@color/green_800" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>